--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - lts/*
   - node
 before_install:
-  - npm install -g nsp
+  - npm install -g nsp codecov
 install:
   - npm install
 script:
