--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,8 @@ node_js:
   - lts/*
   - node
 before_install:
-  - npm install -g nsp codecov
-install:
-  - npm install
+  - npm install -g codecov
 script:
-  - nsp check
   - npm run test
   - codecov
 cache:
