--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@loopback/context": "^1.0.0",
     "@loopback/core": "^1.0.0",
     "@loopback/rest": "^1.1.0",
-    "express-jwt": "^5.3.1",
+    "express-jwt": "github:KalleV/express-jwt#dad0daebe354a9ad0fc8ab160e406fd5a3cac7d9",
     "jwks-rsa": "^1.3.0",
     "parse-bearer-token": "^1.0.0"
   },
